# inifile

./: .gitignore  CMakeLists.txt  README.md  ini_test.cpp  ini_zhtest.cpp  initest.cpp  test.ini  test_read1.cpp  test_read2.cpp  test_read3.cpp  test_stream.cpp  test_trav1.cpp  test_write1.cpp  xini_file.h  xstr_traits.h
